<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1D3D1"
    tools:context=".AddTaskActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/taskName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/edit_text_rounded"
                android:hint="@string/task_name"
                android:padding="12dip" />

            <EditText
                android:id="@+id/taskDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/edit_text_rounded"
                android:hint="@string/description"
                android:padding="12dip" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/attachmentCardView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="15dp">

            <Button
                android:id="@+id/mediaSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_media"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/cameraSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:text="@string/add_picture_from_camera"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <ImageView
                android:layout_margin="12dp"
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dateCardView"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toBottomOf="@+id/attachmentCardView">

        <TextView
            android:id="@+id/dateViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:text="Date"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/datePicker"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.817"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:text="@string/save_task_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attachmentCardView"
        app:layout_constraintVertical_bias="0.729" />

</androidx.constraintlayout.widget.ConstraintLayout>